Code/Kubernetes/reverse-proxy/reverse-proxy-nginx.yaml
# Tester un reverse proxy avec Nginx Ingress Controller, version pour GCloud
# Tester avec http://superpitou.es-12345678.gleeze.com/
# Tester avec http://superminou.es-12345678.gleeze.com/
# Pré-requis: un cluster Kubernetes avec un Ingress Controller de type Nginx installé et configuré pour gérer les hôtes superminou.es-12345678.gleeze.com et es-12345678.gleeze.com pointant vers l'IP de votre cluster.
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.15.1/deploy/static/provider/cloud/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: superminou
  labels:
    app: un-superminou
spec:
  replicas: 3
  selector:
    matchLabels:
      mon-app: un-superminou
  template:
    metadata:
      labels:
        mon-app: un-superminou
    spec:
      containers:
      - name: nginx
        resource: 
        image: alainboudreault/superminou:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: superminou-service
spec:
  selector:
    mon-app: un-superminou
  # type: par defaut = ClusterIP, ce qui est requis pour le service ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mon-app: un-superpitou
  name: super-pitou
spec:
  replicas: 1
  selector:
    matchLabels:
      mon-app: un-superpitou
  template:
    metadata:
      labels:
        mon-app: un-superpitou
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: php:8.0.3-apache-buster
        name: php-apache
        volumeMounts:
        - name: webdata
          mountPath: "/var/www/html"

---
apiVersion: v1
kind: Service
metadata:
  name: superpitou-service
spec:
  selector:
    mon-app: un-superpitou
  # type: par defaut = ClusterIP, ce qui est requis pour le service ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80      

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo01
spec:
  ingressClassName: nginx
  rules:
  - host: superminou.4204d4.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superminou-service
            port: 
              number: 80
  - host: superpitou.4204d4.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superpitou-service
            port: 
              number: 80
